# Probarepp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.gitlab-ci/: Dockerfile.alpine
cmake/: CompilerOptions.cmake  ProjectFunctions.cmake
include/: probare  probare_entry
include/probare_core/: common.hpp  data.hpp  equal.hpp  logic.hpp  test.hpp  throw.hpp
include/probare_extra/: data.hpp  equal.hpp  logic.hpp  templates.hpp  throw.hpp
src/: framework.cpp  messages.cpp
tests/: dummys.cpp  loops.cpp  main.cpp  manual.cpp  parallel.cpp  serial.cpp
